# autoscout-analysis

./: .gitignore  README.md  pyproject.toml  stats.json  workbench.py
_old/auto1_crawler/: README.md  auto1_crawler.py
car_market_analysis/: autoscout24_crawler.py  main.py
conf/: logging.yml
conf/base/: catalog.yml  parameters_data_processing.yml
conf/test/: catalog.yml  parameters_data_processing.yml
notebooks/: analysis.ipynb
src/as24_crawl/: __init__.py  __main__.py
src/as24_crawl/pipelines/data_processing/: cleanup.py  crawl_nodes.py  pipeline.py
src/as24_crawl/pipelines/data_science/: __init__.py  pipeline.py
src/as24_crawl/pipelines/reporting/: pipeline.py
tests/: test_run.py
tests/pipelines/data_science/: test_pipeline.py
