[tool.poetry]
name = "car-market-analysis"
version = "0.1.0"
description = ""
authors = ["Pascal Brokmeier <git@pascalbrokmeier.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
joblib = "^1.4.2"
pandas = "^2.2.2"
pyarrow = "^16.1.0"
tqdm = "^4.66.4"
typer = "^0.12.3"
tenacity = "^8.3.0"
matplotlib = "^3.9.0"
seaborn = "^0.13.2"
ipykernel = "^6.29.4"
loguru = "^0.7.2"
beautifulsoup4 = "^4.12.3"
kedro = "^0.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
